--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Binaries for programs and plugins
 *.exe
 *.exe~
-*.dll
-*.so
-*.dylib
+build/go_build_main_go
+build/gotune
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,4 +11,9 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# IDE
+.idea/
+.vscode/
+.idea/*
