--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-13          # Intel runner
+          - os: macos-15-intel    # Intel runner
             goos: darwin
             goarch: amd64
             binary: gotune-darwin-amd64
@@ -170,7 +170,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-13          # Intel runner
+          - os: macos-15-intel    # Intel runner
             goos: darwin
             goarch: amd64
             artifact_name: GoTune-macOS-amd64.zip
