fix(ci): use bash shell for build binary step
The build binary step was failing on Windows because it was using the default PowerShell, which does not support the syntax used for setting environment variables. This commit fixes the issue by explicitly setting the shell to bash for this step.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,6 +153,7 @@ jobs:
         run: ./scripts/setup-libs.sh
 
       - name: Build binary
+        shell: bash
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
