--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -246,11 +246,8 @@ jobs:
           GIT_TAG=$(git describe --tags --exact-match 2>/dev/null || echo "")
           BUILD_TIME=$(date -u '+%Y-%m-%dT%H:%M:%SZ')
 
-          GOFLAGS="-ldflags=\"\
-            -X '${{ env.MODULE }}/internal/app.Version=${VERSION}' \
-            -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' \
-            -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' \
-            -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'\"" fyne package -os darwin
+          LDFLAGS="-X '${{ env.MODULE }}/internal/app.Version=${VERSION}' -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'"
+          env GOFLAGS="-ldflags='${LDFLAGS}'" fyne package -os darwin
           install_name_tool -add_rpath @executable_path "Go Tune.app/Contents/MacOS/gotune"
           cp ${{ matrix.lib_path }}/${{ matrix.lib_file }} "Go Tune.app/Contents/MacOS/"
           zip -r "${{ matrix.artifact_name }}" "Go Tune.app"
@@ -265,11 +262,8 @@ jobs:
           GIT_TAG=$(git describe --tags --exact-match 2>/dev/null || echo "")
           BUILD_TIME=$(date -u '+%Y-%m-%dT%H:%M:%SZ')
 
-          GOFLAGS="-ldflags=\"\
-            -X '${{ env.MODULE }}/internal/app.Version=${VERSION}' \
-            -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' \
-            -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' \
-            -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'\"" fyne package -os linux
+          LDFLAGS="-X '${{ env.MODULE }}/internal/app.Version=${VERSION}' -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'"
+          env GOFLAGS="-ldflags='${LDFLAGS}'" fyne package -os linux
           mkdir -p package-tmp
           tar -xf "Go Tune.tar.xz" -C package-tmp
           cp ${{ matrix.lib_path }}/${{ matrix.lib_file }} package-tmp/usr/local/bin/
@@ -289,12 +283,8 @@ jobs:
           if (-not $GIT_TAG) { $GIT_TAG = "" }
           $BUILD_TIME = (Get-Date -Format "yyyy-MM-ddTHH:mm:ssZ" -AsUTC)
 
-          $GOFLAGS = "-ldflags=`"-X '${{ env.MODULE }}/internal/app.Version=$VERSION' `
-            -X '${{ env.MODULE }}/internal/app.GitCommit=$GIT_COMMIT' `
-            -X '${{ env.MODULE }}/internal/app.GitTag=$GIT_TAG' `
-            -X '${{ env.MODULE }}/internal/app.BuildTime=$BUILD_TIME'`""
-
-          $Env:GOFLAGS = $GOFLAGS
+          $LDFLAGS = "-X '${{ env.MODULE }}/internal/app.Version=$VERSION' -X '${{ env.MODULE }}/internal/app.GitCommit=$GIT_COMMIT' -X '${{ env.MODULE }}/internal/app.GitTag=$GIT_TAG' -X '${{ env.MODULE }}/internal/app.BuildTime=$BUILD_TIME'"
+          $env:GOFLAGS = "-ldflags='$LDFLAGS'"
           fyne package -os windows
           New-Item -ItemType Directory -Force -Path package-tmp
           Copy-Item "Go Tune.exe" package-tmp/
