--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,7 +247,10 @@ jobs:
           BUILD_TIME=$(date -u '+%Y-%m-%dT%H:%M:%SZ')
 
           LDFLAGS="-X '${{ env.MODULE }}/internal/app.Version=${VERSION}' -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'"
-          env GOFLAGS="-ldflags='${LDFLAGS}'" fyne package -os darwin
+          echo "LDFLAGS: ${LDFLAGS}"
+          FINAL_GOFLAGS="-ldflags=${LDFLAGS}"
+          echo "GOFLAGS: ${FINAL_GOFLAGS}"
+          env GOFLAGS="${FINAL_GOFLAGS}" fyne package -os darwin
           install_name_tool -add_rpath @executable_path "Go Tune.app/Contents/MacOS/gotune"
           cp ${{ matrix.lib_path }}/${{ matrix.lib_file }} "Go Tune.app/Contents/MacOS/"
           zip -r "${{ matrix.artifact_name }}" "Go Tune.app"
@@ -263,7 +266,10 @@ jobs:
           BUILD_TIME=$(date -u '+%Y-%m-%dT%H:%M:%SZ')
 
           LDFLAGS="-X '${{ env.MODULE }}/internal/app.Version=${VERSION}' -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'"
-          env GOFLAGS="-ldflags='${LDFLAGS}'" fyne package -os linux
+          echo "LDFLAGS: ${LDFLAGS}"
+          FINAL_GOFLAGS="-ldflags=${LDFLAGS}"
+          echo "GOFLAGS: ${FINAL_GOFLAGS}"
+          env GOFLAGS="${FINAL_GOFLAGS}" fyne package -os linux
           mkdir -p package-tmp
           tar -xf "Go Tune.tar.xz" -C package-tmp
           cp ${{ matrix.lib_path }}/${{ matrix.lib_file }} package-tmp/usr/local/bin/
@@ -284,7 +290,9 @@ jobs:
           $BUILD_TIME = (Get-Date -Format "yyyy-MM-ddTHH:mm:ssZ" -AsUTC)
 
           $LDFLAGS = "-X '${{ env.MODULE }}/internal/app.Version=$VERSION' -X '${{ env.MODULE }}/internal/app.GitCommit=$GIT_COMMIT' -X '${{ env.MODULE }}/internal/app.GitTag=$GIT_TAG' -X '${{ env.MODULE }}/internal/app.BuildTime=$BUILD_TIME'"
-          $env:GOFLAGS = "-ldflags='$LDFLAGS'"
+          Write-Output "LDFLAGS: $LDFLAGS"
+          $env:GOFLAGS = "-ldflags=""$LDFLAGS"""
+          Write-Output "GOFLAGS: $env:GOFLAGS"
           fyne package -os windows
           New-Item -ItemType Directory -Force -Path package-tmp
           Copy-Item "Go Tune.exe" package-tmp/
