--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -248,9 +248,9 @@ jobs:
 
           LDFLAGS="-X '${{ env.MODULE }}/internal/app.Version=${VERSION}' -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'"
           echo "LDFLAGS: ${LDFLAGS}"
-          FINAL_GOFLAGS="-ldflags=${LDFLAGS}"
-          echo "GOFLAGS: ${FINAL_GOFLAGS}"
-          env GOFLAGS="${FINAL_GOFLAGS}" fyne package -os darwin
+          GOFLAGS="-ldflags=\"${LDFLAGS}\""
+          echo "GOFLAGS: ${GOFLAGS}"
+          env GOFLAGS="${GOFLAGS}" fyne package -os darwin
           install_name_tool -add_rpath @executable_path "Go Tune.app/Contents/MacOS/gotune"
           cp ${{ matrix.lib_path }}/${{ matrix.lib_file }} "Go Tune.app/Contents/MacOS/"
           zip -r "${{ matrix.artifact_name }}" "Go Tune.app"
@@ -267,9 +267,9 @@ jobs:
 
           LDFLAGS="-X '${{ env.MODULE }}/internal/app.Version=${VERSION}' -X '${{ env.MODULE }}/internal/app.GitCommit=${GIT_COMMIT}' -X '${{ env.MODULE }}/internal/app.GitTag=${GIT_TAG}' -X '${{ env.MODULE }}/internal/app.BuildTime=${BUILD_TIME}'"
           echo "LDFLAGS: ${LDFLAGS}"
-          FINAL_GOFLAGS="-ldflags=${LDFLAGS}"
-          echo "GOFLAGS: ${FINAL_GOFLAGS}"
-          env GOFLAGS="${FINAL_GOFLAGS}" fyne package -os linux
+          GOFLAGS="-ldflags=\"${LDFLAGS}\""
+          echo "GOFLAGS: ${GOFLAGS}"
+          env GOFLAGS="${GOFLAGS}" fyne package -os linux
           mkdir -p package-tmp
           tar -xf "Go Tune.tar.xz" -C package-tmp
           cp ${{ matrix.lib_path }}/${{ matrix.lib_file }} package-tmp/usr/local/bin/
@@ -291,7 +291,7 @@ jobs:
 
           $LDFLAGS = "-X '${{ env.MODULE }}/internal/app.Version=$VERSION' -X '${{ env.MODULE }}/internal/app.GitCommit=$GIT_COMMIT' -X '${{ env.MODULE }}/internal/app.GitTag=$GIT_TAG' -X '${{ env.MODULE }}/internal/app.BuildTime=$BUILD_TIME'"
           Write-Output "LDFLAGS: $LDFLAGS"
-          $env:GOFLAGS = "-ldflags=""$LDFLAGS"""
+          $env:GOFLAGS = "-ldflags=`"$LDFLAGS`""
           Write-Output "GOFLAGS: $env:GOFLAGS"
           fyne package -os windows
           New-Item -ItemType Directory -Force -Path package-tmp
